--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -42,13 +42,14 @@ header {
 /* Estilo da sidebar para exibição dos detalhes */
 #sidebar {
   font-family: "Roboto Condensed", serif;
+  font-size: 10pt;
   position: absolute;
   top: 100px;
   right: 10px;
   background: rgba(255, 255, 255, 0.9);
   padding: 15px;
   border-radius: 4px;
-  width: 300px;
+  width: 400px;
   max-height: 80%;
   overflow-y: auto;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
@@ -61,6 +62,10 @@ header {
   padding-bottom: 5px;
 }
 
+#sidebar p {
+  margin: 0;
+}
+
 #carouselContainer {
   display: flex;
   align-items: center;
@@ -71,29 +76,39 @@ header {
   overflow-x: auto;
   scroll-snap-type: x mandatory;
   -webkit-overflow-scrolling: touch;
+  width: 100%;
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+}
+
+#carousel::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
 }
 
 .eventCard {
   flex: 0 0 auto;
   scroll-snap-align: start;
   margin-right: 10px;
-  /* Outros estilos para o card */
+  padding: 10px;
+  width: calc(100% - 30px);
 }
 
-.button {
-  background-color: #007BFF; /* Cor de fundo principal */
+.navigationButtons {
+  background-color: #214448; /* Cor de fundo principal */
   color: #FFFFFF; /* Cor do texto */
   font-family: "Roboto Condensed", serif; /* Tipografia */
   font-size: 16px; /* Tamanho da fonte */
-  padding: 10px 20px; /* Espaçamento interno */
+  padding: 20px 20px; /* Espaçamento interno */
+  margin: 10px 10px; /* Espaçamento externo */
   border: none; /* Remover borda padrão */
   border-radius: 5px; /* Bordas arredondadas */
   cursor: pointer; /* Cursor de ponteiro ao passar sobre o botão */
   transition: background-color 0.3s ease; /* Transição suave para a cor de fundo */
 }
 
-.button:hover {
-  background-color: #0056b3; /* Cor de fundo ao passar o mouse */
+.navigationButtons:hover {
+  background-color: #40c99d;
+  color: #214448;
 }
 
 /* Customização do título do popup */
